Added some bootstrap to Dashboard and part of Tracker details

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,23 +1,52 @@
 {% extends 'layout.html' %} {% block body %}
 
-<p>Welcome {{user_name}}, this is your dashboard</p>
-last logged in: {{last_login_time}} <br>
-<a href="/tracker/{{user_name}}">Create a new tracker</a><br>
-<a href="/logout//{{user_name}}">Log Out</a><br> <br>
-<h2>List of trackers</h2> <br>
+<div class="row mt-5 justify-content-center">
+    <div class="col-auto h5">
+        Welcome {{user_name}}, this is your dashboard
+    </div>
+</div>
+<div class="row mt-2 justify-content-center">
+    <div class="col-auto h6">
+        Last logged in: {{last_login_time}} <br>
+    </div>
+</div>
+<div class="row mt-2 justify-content-center">
+    <div class="col-auto">
+        <a class="btn btn-success" href="/tracker/{{user_name}}">Create a new tracker</a>
+    </div>
+</div>
+<div class="row mt-3 justify-content-center">
+    <div class="col-auto">
+        <h2 class="h2">List of trackers</h2>
+    </div>
+</div>
+<div class="row justify-content-center">
+    {% for tracker in usertrackers %}
+    <div class="col-auto mr-3 mt-3 d-flex justify-content-center">
+        <div class="row justify-content-center text-center">
+            <div class="col-auto">
+                <div class="p-3 border-light border rounded">
+                    Name - {{tracker["tracker_name"]}} <br>
+                    Last recorded - {{tracker["tracker_log_time"]}} <br>
+                    Description - {{tracker["tracker_description"]}} <br>
+                    {% if tracker["tracker_type"] == "numerical_tracker"%}Type - Numerical{% endif %}
+                    {% if tracker["tracker_type"] == "boolean_tracker"%}Type - Yes/No{% endif %}
+                    {% if tracker["tracker_type"] == "mo_tracker"%}Type - Multiple Options{% endif %}
+                    {% if tracker["tracker_type"] == "time_tracker"%}Type - Time Duration{% endif %} <br>
+                    <a class="btn btn-primary mt-4 mb-2" href='/trackerdetails/{{tracker["tracker_id"]}}'>Details</a>
+                    <br>
+                    <a class="btn btn-danger mt-2 mb-2" href='/deletetracker/{{tracker["tracker_id"]}}'>Remove</a> <br>
+                </div>
+            </div>
+        </div>
+    </div>
+    {% endfor %}
+</div>
 
-{% for tracker in usertrackers %}
-Name - {{tracker["tracker_name"]}}<br>
-Last recorded - {{tracker["tracker_log_time"]}}<br>
-Description - {{tracker["tracker_description"]}} <br>
-{% if tracker["tracker_type"] == "numerical_tracker"%}Type - Numerical{% endif %}
-{% if tracker["tracker_type"] == "boolean_tracker"%}Type - Yes/No{% endif %}
-{% if tracker["tracker_type"] == "mo_tracker"%}Type - Multiple Options{% endif %}
-{% if tracker["tracker_type"] == "time_tracker"%}Type - Time Duration{% endif %}
-<br>
-
-<a href='/trackerdetails/{{tracker["tracker_id"]}}'>Details</a> <br>
-<a href='/deletetracker/{{tracker["tracker_id"]}}'>Remove</a> <br> <br>
-{% endfor %}
+<div class="row justify-content-center">
+    <div class="col-auto">
+        <a class="btn btn-danger mt-5" href="/logout//{{user_name}}">Log Out</a>
+    </div>
+</div>
 
 {% endblock %}
