--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,7 +11,7 @@
     <title>{{title}}</title>
 </head>
 
-<body class="text-center mt-5">
+<body class="container-fluid bg-dark text-white">
     {% block body %}{% endblock %}
 </body>
 
