--- a/templates/login.html
+++ b/templates/login.html
@@ -1,59 +1,101 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-
-<h1>Quantified Self App</h1>
-
-{% if login_error_msg != "" %}
-<div>
-    {{login_error_msg}}
+<div class="row justify-content-center">
+    <div class="col-auto mt-5 mb-5">
+        <h1>Quantified Self App</h1>
+    </div>
 </div>
-<br>
-{% endif %}
 
-<form action="/login" method="post" class="container-sm w-25">
-    <div class="input-group mb-3">
-        <span class="input-group-text" id="user_name">User Name</span>
-        <input type="text" class="form-control" name="user_name" aria-label="Username" placeholder="Username"
-            aria-describedby="user_name"><br>
+<div class="row justify-content-center">
+    {% if login_error_msg != "" %}
+    <div class="col-12 col-md-auto">
+        {{login_error_msg}}
     </div>
-
-    <div class="input-group mb-3">
-        <span class="input-group-text" id="password">Password</span>
-        <input type="text" class="form-control" name="password" aria-label="Password" placeholder="Password"
-            aria-describedby="password"><br>
-    </div>
-    <input type="submit" value="Login">
-</form>
-<br>
-<p>New here? Create new account below</p>
-{% if signup_error_msg != "" %}
-<div>
-    {{signup_error_msg}}
+    <br>
+    {% endif %}
 </div>
-<br>
-{% endif %}
-<form action="/register" method="post" class="container-sm w-25">
 
-    <div class="input-group mb-3">
-        <span class="input-group-text" id="user_name">User Name</span>
-        <input type="text" class="form-control" name="user_name" aria-label="Username" placeholder="Username"
-            aria-describedby="user_name"><br>
+<!-- Login form -->
+
+<div class="row justify-content-center">
+    <div class="col-12 col-md-auto">
+        <form action="/login" method="post" id="login_form">
+            <div class="row mb-2">
+                <div class="col-12 col-md-auto">
+                    <label for="user_name" class="form-label">User Name</label>
+                </div>
+                <div class="col-12 col-md-12">
+                    <input type="text" id="user_name" name="user_name" placeholder="Username" class="form-control">
+                </div>
+            </div>
+            <div class="row mb-2">
+                <div class="col-12 col-md-auto">
+                    <label for="password" class="form-label">Password</label>
+                </div>
+                <div class="col-12 col-md-12">
+                    <input type="password" id="password" name="password" placeholder="Password" class="form-control">
+                </div>
+            </div>
+            <div class="row mb-2 justify-content-center">
+                <div class="col-auto">
+                    <button class="btn btn-primary" type="submit" form="login_form">Login</button>
+                </div>
+            </div>
+        </form>
     </div>
+</div>
 
-    <div class="input-group mb-3">
-        <span class="input-group-text" id="password1">Password</span>
-        <input type="text" class="form-control" name="password1" aria-label="Password" placeholder="Type Password"
-            aria-describedby="password1"><br>
+<!-- Sign up/Register form -->
+
+<div class="row justify-content-center">
+    <div class="col-12 col-md-auto mt-5">
+        <p>New here? Create new account below</p>
+        {% if signup_error_msg != "" %}
+        <div>
+            {{signup_error_msg}}
+        </div>
+        <br>
+        {% endif %}
     </div>
+</div>
 
-    <div class="input-group mb-3">
-        <span class="input-group-text" id="password2">Password</span>
-        <input type="text" class="form-control" name="password2" aria-label="Password" placeholder="Confirm Password"
-            aria-describedby="password2"><br>
+<div class="row justify-content-center">
+    <div class="col-12 col-md-auto">
+        <form action="/register" method="post" id="sign_up_form">
+            <div class="row mb-2">
+                <div class="col-12 col-md-auto">
+                    <label for="user_name" class="form-label">User Name</label>
+                </div>
+                <div class="col-12 col-md-12">
+                    <input type="text" id="user_name" name="user_name" placeholder="Username" class="form-control">
+                </div>
+            </div>
+            <div class="row mb-2">
+                <div class="col-12 col-md-auto">
+                    <label for="password1" class="form-label">Password</label>
+                </div>
+                <div class="col-12 col-md-12">
+                    <input type="password" id="password1" name="password1" placeholder="Type Password"
+                        class="form-control">
+                </div>
+            </div>
+            <div class="row mb-2">
+                <div class="col-12 col-md-auto">
+                    <label for="password2" class="form-label">Password</label>
+                </div>
+                <div class="col-12 col-md-12">
+                    <input type="password" id="password2" name="password2" placeholder="Confirm Password"
+                        class="form-control">
+                </div>
+            </div>
+            <div class="row mb-2 justify-content-center">
+                <div class="col-auto">
+                    <button class="btn btn-primary" type="submit" form="sign_up_form">Create Account</button>
+                </div>
+            </div>
+        </form>
     </div>
-
-    <input type="submit" value="Register">
-</form>
+</div>
 
 {% endblock %}
