--- a/templates/value_input_form.html
+++ b/templates/value_input_form.html
@@ -1,8 +1,9 @@
 {% if tracker["tracker_type"] == "numerical_tracker"%}
-<div class="input-group mb-3 container-sm w-25">
-    <span class="input-group-text" id="log_value">Value</span>
-    <input type="number" step="0.1" class="form-control" name="log_value" aria-label="Value"
-        aria-describedby="log_value"><br>
+<div class="row mt-2 form-group d-flex justify-content-center">
+    <label class="col-form-label col-sm-2" for="log_value">Value</label>
+    <div class="col-sm-10">
+        <input type="number" step="0.1" class="form-control" name="log_value" id="log_value">
+    </div>
 </div>
 {% endif %}
 
@@ -43,9 +44,9 @@ Your options <br>
 {% endfor %}
 {% endif %}
 
-<br>
-
-<div class="input-group mb-3 container-sm w-25">
-    <span class="input-group-text" id="log_note">Notes</span>
-    <input type="text" class="form-control" name="log_note" aria-label="Minutes" aria-describedby="log_note"><br>
+<div class="row mt-2 form-group justify-content-center">
+    <label class="col-form-label col-sm-2" for="log_note">Add Notes</label>
+    <div class="col-sm-10">
+        <input type="text" class="form-control" name="log_value" id="log_value">
+    </div>
 </div>
