Changed the look of dashboard and plus some minor UI adjustments

--- a/templates/login.html
+++ b/templates/login.html
@@ -19,7 +19,7 @@
 <!-- Login form -->
 
 <div class="row justify-content-center">
-    <div class="col-12 col-md-auto">
+    <div class="col-12 col-md-auto border border-light rounded-3 p-4">
         <form action="/login" method="post" id="login_form">
             <div class="row mb-2">
                 <div class="col-12 col-md-auto">
@@ -29,7 +29,7 @@
                     <input type="text" id="user_name" name="user_name" placeholder="Username" class="form-control">
                 </div>
             </div>
-            <div class="row mb-2">
+            <div class="row mb-4">
                 <div class="col-12 col-md-auto">
                     <label for="password" class="form-label">Password</label>
                 </div>
@@ -37,7 +37,7 @@
                     <input type="password" id="password" name="password" placeholder="Password" class="form-control">
                 </div>
             </div>
-            <div class="row mb-2 justify-content-center">
+            <div class="row justify-content-center">
                 <div class="col-auto">
                     <button class="btn btn-primary" type="submit" form="login_form">Login</button>
                 </div>
@@ -61,7 +61,7 @@
 </div>
 
 <div class="row justify-content-center">
-    <div class="col-12 col-md-auto">
+    <div class="col-12 col-md-auto border border-light rounded-3 p-4">
         <form action="/register" method="post" id="sign_up_form">
             <div class="row mb-2">
                 <div class="col-12 col-md-auto">
@@ -80,7 +80,7 @@
                         class="form-control">
                 </div>
             </div>
-            <div class="row mb-2">
+            <div class="row mb-4">
                 <div class="col-12 col-md-auto">
                     <label for="password2" class="form-label">Password</label>
                 </div>
@@ -89,7 +89,7 @@
                         class="form-control">
                 </div>
             </div>
-            <div class="row mb-2 justify-content-center">
+            <div class="row justify-content-center">
                 <div class="col-auto">
                     <button class="btn btn-primary" type="submit" form="sign_up_form">Create Account</button>
                 </div>
