--- a/templates/value_input_form.html
+++ b/templates/value_input_form.html
@@ -1,10 +1,20 @@
 {% if tracker["tracker_type"] == "numerical_tracker"%}
-<div class="row mt-2 form-group d-flex justify-content-center">
-    <label class="col-form-label col-sm-2" for="log_value">Value</label>
-    <div class="col-sm-10">
-        <input type="number" step="0.1" class="form-control" name="log_value" id="log_value">
+
+<div class="row">
+    <div class="col">
+        <div class="row">
+            <div class="col">
+                <label class="col-form-label" for="log_value">Value</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <input type="number" step="0.1" class="form-control" name="log_value" id="log_value">
+            </div>
+        </div>
     </div>
 </div>
+
 {% endif %}
 
 {% if tracker["tracker_type"] == "boolean_tracker"%}
@@ -44,9 +54,24 @@ Your options <br>
 {% endfor %}
 {% endif %}
 
-<div class="row mt-2 form-group justify-content-center">
+<!-- <div class="row mt-2 form-group justify-content-center">
     <label class="col-form-label col-sm-2" for="log_note">Add Notes</label>
     <div class="col-sm-10">
         <input type="text" class="form-control" name="log_value" id="log_value">
+    </div>
+</div> -->
+
+<div class="row">
+    <div class="col">
+        <div class="row">
+            <div class="col">
+                <label class="col-form-label" for="log_note">Add Notes</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <input type="text" class="form-control" name="log_value" id="log_value">
+            </div>
+        </div>
     </div>
 </div>
