--- a/templates/value_input_form.html
+++ b/templates/value_input_form.html
@@ -54,13 +54,6 @@ Your options <br>
 {% endfor %}
 {% endif %}
 
-<!-- <div class="row mt-2 form-group justify-content-center">
-    <label class="col-form-label col-sm-2" for="log_note">Add Notes</label>
-    <div class="col-sm-10">
-        <input type="text" class="form-control" name="log_value" id="log_value">
-    </div>
-</div> -->
-
 <div class="row">
     <div class="col">
         <div class="row">
@@ -70,7 +63,7 @@ Your options <br>
         </div>
         <div class="row">
             <div class="col">
-                <input type="text" class="form-control" name="log_value" id="log_value">
+                <input type="text" class="form-control" name="log_note" id="log_note">
             </div>
         </div>
     </div>
