--- a/templates/login.html
+++ b/templates/login.html
@@ -16,85 +16,117 @@
     {% endif %}
 </div>
 
-<!-- Login form -->
-
 <div class="row justify-content-center">
-    <div class="col-12 col-md-auto border border-light rounded-3 p-4">
-        <form action="/login" method="post" id="login_form">
-            <div class="row mb-2">
-                <div class="col-12 col-md-auto">
-                    <label for="user_name" class="form-label">User Name</label>
-                </div>
-                <div class="col-12 col-md-12">
-                    <input type="text" id="user_name" name="user_name" placeholder="Username" class="form-control">
-                </div>
-            </div>
-            <div class="row mb-4">
-                <div class="col-12 col-md-auto">
-                    <label for="password" class="form-label">Password</label>
-                </div>
-                <div class="col-12 col-md-12">
-                    <input type="password" id="password" name="password" placeholder="Password" class="form-control">
-                </div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-auto">
-                    <button class="btn btn-primary" type="submit" form="login_form">Login</button>
-                </div>
-            </div>
-        </form>
-    </div>
-</div>
 
-<!-- Sign up/Register form -->
-
-<div class="row justify-content-center">
-    <div class="col-12 col-md-auto mt-5">
-        <p>New here? Create new account below</p>
-        {% if signup_error_msg != "" %}
-        <div>
-            {{signup_error_msg}}
+    <!-- Login form -->
+    <div class="col-12 col-lg-3">
+        <div class="row justify-content-center mb-4">
+            <div class="col-12 col-sm-auto text-center">
+                <p>Already have an coount? Log in below</p>
+            </div>
         </div>
-        <br>
-        {% endif %}
+        <div class="row justify-content-center">
+            <div class="col-12 col-sm-auto border border-light rounded-3 p-4">
+                <form action="/login" method="post" id="login_form">
+                    <div class="row mb-2">
+                        <div class="col-12 col-md-auto">
+                            <label for="user_name" class="form-label">User Name</label>
+                        </div>
+                        <div class="col-12 col-md-12">
+                            <input type="text" id="user_name" name="user_name" placeholder="Username" class="form-control">
+                        </div>
+                    </div>
+                    <div class="row mb-4">
+                        <div class="col-12 col-md-auto">
+                            <label for="password" class="form-label">Password</label>
+                        </div>
+                        <div class="col-12 col-md-12">
+                            <input type="password" id="password" name="password" placeholder="Password" class="form-control">
+                        </div>
+                    </div>
+                    <div class="row justify-content-center">
+                        <div class="col-auto">
+                            <button class="btn btn-primary" type="submit" form="login_form">Login</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
-</div>
 
-<div class="row justify-content-center">
-    <div class="col-12 col-md-auto border border-light rounded-3 p-4">
-        <form action="/register" method="post" id="sign_up_form">
-            <div class="row mb-2">
-                <div class="col-12 col-md-auto">
-                    <label for="user_name" class="form-label">User Name</label>
-                </div>
-                <div class="col-12 col-md-12">
-                    <input type="text" id="user_name" name="user_name" placeholder="Username" class="form-control">
-                </div>
+    <!-- Guest view -->
+    <div class="col-12 col-lg-3">
+        <div class="row mt-3 justify-content-center">
+            <div class="col-6">
+                <img class="img-fluid" height="300px" src="{{ url_for('static', filename='person.png') }}" alt="Guest user">
             </div>
-            <div class="row mb-2">
-                <div class="col-12 col-md-auto">
-                    <label for="password1" class="form-label">Password</label>
-                </div>
-                <div class="col-12 col-md-12">
-                    <input type="password" id="password1" name="password1" placeholder="Type Password"
-                        class="form-control">
-                </div>
+        </div>
+        <div class="row m-2 justify-content-center">
+            <div class="col-auto">
+                <a class="btn btn-primary" href="/guest/dashboard">Guest view</a>
             </div>
-            <div class="row mb-4">
-                <div class="col-12 col-md-auto">
-                    <label for="password2" class="form-label">Password</label>
-                </div>
-                <div class="col-12 col-md-12">
-                    <input type="password" id="password2" name="password2" placeholder="Confirm Password"
-                        class="form-control">
-                </div>
+        </div>
+        <div class="row">
+            <div class="col text-center">
+                No need to Log In/Sign Up. <br>
+                Click to view the look of available web pages <br>
+                Can not edit/save data in Guest mode.
             </div>
-            <div class="row justify-content-center">
-                <div class="col-auto">
-                    <button class="btn btn-primary" type="submit" form="sign_up_form">Create Account</button>
+        </div>
+    </div>
+
+    <!-- Sign up/Register form -->
+
+    <div class="col-12 col-lg-3">
+        <div class="row justify-content-center">
+            <div class="col-12 col-sm-auto text-center">
+                <p>New here? Create new account below</p>
+                {% if signup_error_msg != "" %}
+                <div>
+                    {{signup_error_msg}}
                 </div>
+                <br>
+                {% endif %}
             </div>
-        </form>
+        </div>
+
+        <div class="row justify-content-center">
+            <div class="col-12 col-sm-auto border border-light rounded-3 p-4">
+                <form action="/register" method="post" id="sign_up_form">
+                    <div class="row mb-2">
+                        <div class="col-12 col-md-auto">
+                            <label for="user_name" class="form-label">User Name</label>
+                        </div>
+                        <div class="col-12 col-md-12">
+                            <input type="text" id="user_name" name="user_name" placeholder="Username" class="form-control">
+                        </div>
+                    </div>
+                    <div class="row mb-2">
+                        <div class="col-12 col-md-auto">
+                            <label for="password1" class="form-label">Password</label>
+                        </div>
+                        <div class="col-12 col-md-12">
+                            <input type="password" id="password1" name="password1" placeholder="Type Password"
+                                class="form-control">
+                        </div>
+                    </div>
+                    <div class="row mb-4">
+                        <div class="col-12 col-md-auto">
+                            <label for="password2" class="form-label">Password</label>
+                        </div>
+                        <div class="col-12 col-md-12">
+                            <input type="password" id="password2" name="password2" placeholder="Confirm Password"
+                                class="form-control">
+                        </div>
+                    </div>
+                    <div class="row justify-content-center">
+                        <div class="col-auto">
+                            <button class="btn btn-primary" type="submit" form="sign_up_form">Create Account</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
 </div>
 
