--- a/templates/login.html
+++ b/templates/login.html
@@ -1,9 +1,9 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-<div class="row justify-content-center">
+<div class="row justify-content-center bg-primary">
     <div class="col-auto mt-5 mb-5">
-        <h1>Quantified Self App</h1>
+        <h1 class="text-white">Quantified Self App</h1>
     </div>
 </div>
 
@@ -26,14 +26,14 @@
             </div>
         </div>
         <div class="row justify-content-center">
-            <div class="col-12 col-sm-auto border border-light rounded-3 p-4">
+            <div class="col-12 col-sm-auto border border-primary rounded-3 p-4">
                 <form action="/login" method="post" id="login_form">
                     <div class="row mb-2">
                         <div class="col-12 col-md-auto">
                             <label for="user_name" class="form-label">User Name</label>
                         </div>
                         <div class="col-12 col-md-12">
-                            <input type="text" id="user_name" name="user_name" placeholder="Username" class="form-control">
+                            <input type="text" id="user_name" name="user_name" placeholder="" class="form-control">
                         </div>
                     </div>
                     <div class="row mb-4">
@@ -41,7 +41,7 @@
                             <label for="password" class="form-label">Password</label>
                         </div>
                         <div class="col-12 col-md-12">
-                            <input type="password" id="password" name="password" placeholder="Password" class="form-control">
+                            <input type="password" id="password" name="password" placeholder="" class="form-control">
                         </div>
                     </div>
                     <div class="row justify-content-center">
@@ -56,21 +56,21 @@
 
     <!-- Guest view -->
     <div class="col-12 col-lg-3">
-        <div class="row mt-3 justify-content-center">
+        <!-- <div class="row mt-3 justify-content-center">
             <div class="col-6">
                 <img class="img-fluid" height="300px" src="{{ url_for('static', filename='person.png') }}" alt="Guest user">
             </div>
-        </div>
-        <div class="row m-2 justify-content-center">
-            <div class="col-auto">
-                <a class="btn btn-primary" href="/guest/dashboard">Guest view</a>
-            </div>
-        </div>
+        </div> -->
         <div class="row">
             <div class="col text-center">
                 No need to Log In/Sign Up. <br>
                 Click to view the look of available web pages <br>
                 Can not edit/save data in Guest mode.
+            </div>
+        </div>
+        <div class="row m-2 justify-content-center">
+            <div class="col-auto">
+                <a class="btn btn-primary" href="/guest/dashboard">Guest view</a>
             </div>
         </div>
     </div>
@@ -91,7 +91,7 @@
         </div>
 
         <div class="row justify-content-center">
-            <div class="col-12 col-sm-auto border border-light rounded-3 p-4">
+            <div class="col-12 col-sm-auto border border-primary rounded-3 p-4">
                 <form action="/register" method="post" id="sign_up_form">
                     <div class="row mb-2">
                         <div class="col-12 col-md-auto">
