finalized look of homepage

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,5 +15,6 @@
 <body class="fs-5 bgImage">
     {% block body %}{% endblock %}
 </body>
+<script src="../static/myscript.js"></script>
 
 </html>
