--- a/templates/login1.html
+++ b/templates/login1.html
@@ -19,7 +19,7 @@
     <div class="row justify-content-center">
 
         <!-- Login form -->
-        <div class="col-12">
+        <div class="col-9 col-sm-5 col-md-4 col-lg-3" id="login_form_main">
             <div class="row justify-content-center mb-4">
                 <div class="col-12 col-sm-auto text-center">
                     <p>Log in to continue monitoring your habits</p>
@@ -27,7 +27,7 @@
             </div>
 
             <div class="row justify-content-center">
-                <div class="col-12 col-sm-auto border border-dark rounded-3 p-4">
+                <div class="border border-dark rounded-3 p-4">
                     <form action="/login" method="post" id="login_form">
                         <div class="row mb-2">
                             <div class="col-12 col-md-auto">
@@ -40,10 +40,12 @@
                         <div class="row mb-4">
                             <div class="col-12 col-md-auto">
                                 <label for="password" class="form-label">Password</label>
-                                <i class="fa fa-eye"></i>
                             </div>
                             <div class="col-12 col-md-12">
                                 <input type="password" id="password" name="password" placeholder="" class="form-control">
+                            </div>
+                            <div class="">
+                                <input type="checkbox" onclick="showPassword()"> Show Password
                             </div>
                         </div>
                         <div class="row justify-content-center">
@@ -54,30 +56,19 @@
                     </form>
                 </div>
             </div>
-        </div>
-
-        <!-- Guest view -->
-        <div class="col-12">
-            <div class="row">
-                <div class="col text-center">
-                    No need to Log In/Sign Up. <br>
-                    Click to view the look of available web pages <br>
-                    Can not edit/save data in Guest mode.
-                </div>
-            </div>
-            <div class="row m-2 justify-content-center">
+            <div class="row justify-content-center my-2">
                 <div class="col-auto">
-                    <a class="btn btn-dark" href="/guest/dashboard">Guest view</a>
+                    Don't have an account? <a href="#" class="link-secondary" onclick="changeForm()">Create one here</a>
                 </div>
             </div>
         </div>
 
         <!-- Sign up/Register form -->
 
-        <!-- <div class="col-12 col-lg-3">
+        <div class="col-9 col-sm-5 col-md-4 col-lg-3 d-none" id="register_form_main">
             <div class="row justify-content-center">
                 <div class="col-12 col-sm-auto text-center">
-                    <p>New here? Create new account below</p>
+                    Start tracking your daily habits the way you want
                     {% if signup_error_msg != "" %}
                     <div>
                         {{signup_error_msg}}
@@ -88,14 +79,14 @@
             </div>
 
             <div class="row justify-content-center">
-                <div class="col-12 col-sm-auto border border-primary rounded-3 p-4">
+                <div class="border border-dark rounded-3 p-4">
                     <form action="/register" method="post" id="sign_up_form">
                         <div class="row mb-2">
                             <div class="col-12 col-md-auto">
                                 <label for="user_name" class="form-label">User Name</label>
                             </div>
                             <div class="col-12 col-md-12">
-                                <input type="text" id="user_name" name="user_name" placeholder="Username" class="form-control">
+                                <input type="text" id="user_name" name="user_name" placeholder="" class="form-control">
                             </div>
                         </div>
                         <div class="row mb-2">
@@ -103,28 +94,45 @@
                                 <label for="password1" class="form-label">Password</label>
                             </div>
                             <div class="col-12 col-md-12">
-                                <input type="password" id="password1" name="password1" placeholder="Type Password"
+                                <input type="password" id="password1" name="password1" placeholder=""
                                     class="form-control">
                             </div>
                         </div>
                         <div class="row mb-4">
                             <div class="col-12 col-md-auto">
-                                <label for="password2" class="form-label">Password</label>
+                                <label for="password2" class="form-label">Confirm Password</label>
                             </div>
                             <div class="col-12 col-md-12">
-                                <input type="password" id="password2" name="password2" placeholder="Confirm Password"
+                                <input type="password" id="password2" name="password2" placeholder=""
                                     class="form-control">
+                            </div>
+                            <div class="">
+                                <input type="checkbox" onclick="showPassword()"> Show Password
                             </div>
                         </div>
                         <div class="row justify-content-center">
                             <div class="col-auto">
-                                <button class="btn btn-primary" type="submit" form="sign_up_form">Create Account</button>
+                                <button class="btn btn-dark" type="submit" form="sign_up_form">Create Account</button>
                             </div>
                         </div>
                     </form>
                 </div>
             </div>
-        </div> -->
+            <div class="row justify-content-center">
+                <div class="col-auto">
+                    Have an account? <a href="#" class="link-secondary" onclick="changeForm()">Login</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Guest view -->
+        <div class="col-12">
+            <div class="row">
+                <div class="col text-center">
+                    Just want to view website's design? <a class="link-danger" href="/guest/dashboard">Guest view</a>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
